--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,8 @@ djangorestframework-simplejwt = "*"
 psycopg2-binary = "*"
 django = "*"
 djangorestframework = "*"
+gunicorn = "*"
+whitenoise = "*"
 
 [requires]
 python_version = "3.7"
