pushing up for deployment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.3'
 services:
   web:
     build: .
-    command: gunicorn veggie_project.wsgi:application --bind 0.0.0.0:8000
+    command: gunicorn veggies_project.wsgi:application --bind 0.0.0.0:8000
     volumes:
       - .:/code
     ports:
