--- a/veggies_project/.env
+++ b/veggies_project/.env
@@ -1,2 +1,7 @@
 DEBUG=True
 SECRET_KEY=-j8#io&66&hf*lmz8+8ni6s@l0o4r67l@s)agx0*3(6!1e8jci
+DATABASE_NAME=postgres
+DATABASE_USER=postgres
+DATABASE_PASSWORD=postgres
+DATABASE_HOST=db
+DATABASE_PORT=5432
